--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Socially</string>
+    <string name="camera_cd" />
+    <string name="igdirect_cd" />
+    <string name="igtv_cd" />
 </resources>
